--- a/style.css
+++ b/style.css
@@ -16,11 +16,7 @@ body {
 }
 
 h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h2 {
     text-align: center;
 }
 
@@ -34,4 +30,8 @@ h1 {
     bottom: 0;
     width: 100%;
     white-space: nowrap;
+}
+
+.container {
+    width: 100%;
 }
